# pacman-rl

./: .git-askpass.sh  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.claude/skills/python-best-practices/: SKILL.md
.claude/skills/pytorch-best-practices/: SKILL.md
.claude/skills/skill-writer/: SKILL.md
.trae/specs/train-pacman-ppo-shared-policy/: checklist.md  spec.md  tasks.md
layouts/: basic.txt  classic_pacman.txt  maze_big.txt  open.txt  split.txt  tight.txt
log/: updates.md
pacman_rl/: __init__.py  baselines.py  callbacks.py  cli.py  db.py  env.py  evaluation.py  metrics.py  play.py  report.py  stats.py  telegram_reporter.py  train.py  trained.py  utils.py
scripts/: generate_plots.py  smoke_train.py
src/pacman_rl/: config.py  train.py
src/pacman_rl/env/: __init__.py  torch_env.py
src/pacman_rl/ghosts/: __init__.py  classic.py
src/pacman_rl/layouts/: __init__.py  parser.py
src/pacman_rl/models/: __init__.py  cnn_actor_critic.py  q_cnn.py  shared_cnn.py
src/pacman_rl/rl/: __init__.py  a2c.py  dqn.py  ppo.py  replay_buffer.py  rollout_buffer.py  snapshot_pool.py
src/pacman_rl/telemetry/: __init__.py  buffer.py  demo_gif.py  gif.py  plot_png.py  postgres.py  recording.py  sqlite_logger.py  telegram.py  telegram_api.py  telegram_reporter.py  xlsx.py
src/pacman_rl/utils/: __init__.py  checkpointing.py  device.py  dotenv.py
tests/: test_db_unittest.py  test_env_frightened.py  test_layout_parser.py  test_metrics_unittest.py  test_sqlite_logger.py  test_telegram_reporter.py
