[project]
name = "pacman-rl"
version = "0.1.0"
description = "Train Gymnasium ALE/Pacman-v5 with multiple RL algorithms and log metrics to SQLite."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "gymnasium>=0.29.1,<1.3.0",
  "ale-py>=0.8",
  "stable-baselines3>=2.8.0",
  "torch>=2.0",
  "moviepy>=1.0.3",
  "matplotlib>=3.8",
  "requests>=2.31",
]

[project.scripts]
pacman-rl-train = "pacman_rl.cli:main"
pacman-rl-play = "pacman_rl.play:main"
pacman-rl-report = "pacman_rl.report:main"
pacman-rl-trained = "pacman_rl.trained:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pacman_rl"]
